initial commit with material-ui, material-table, express server with json-server

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asset-management-server",
+  "name": "my-asset-management-server",
   "version": "1.0.0",
   "engines": {
     "node": "v13.6.0",
@@ -20,7 +20,7 @@
     "dotenv": "7.0.0",
     "express": "^4.16.4",
     "express-sslify": "^1.2.0",
-    "tubular-nodejs": "^1.0.17"
+    "json-server": "^0.16.1"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
