--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "asset-management",
+  "name": "my-asset-management",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.9.14",
+    "material-table": "^1.57.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "tubular-react": "^4.1.26"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
