adding order by, change material-table version

--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.9.14",
-    "material-table": "^1.57.2",
+    "material-table": "1.58.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
